# collector

./: README.md  pyproject.toml
src/collector/: main.py
