[tool.poetry]
name = "collector"
version = "0.1"
description = "AI powered web scraping"
authors = ["Sebastian Larson"]
license = "open use (must attribute code to author)"

[tool.poetry.dependencies]
numpy = "==1.21.5"
pandas = "==1.4.4"
tqdm = "==4.64.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


